added thumbnail image file request parameter in api_upload_image function
